--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "yup": "^1.1.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "expo-task-manager": "~11.1.1",
+    "expo-notifications": "~0.18.1",
+    "expo-background-fetch": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
