--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo-task-manager": "~11.1.1",
     "expo-notifications": "~0.18.1",
-    "expo-background-fetch": "~11.1.1"
+    "expo-background-fetch": "~11.1.1",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
